--- a/EstudoFloat/teste.html
+++ b/EstudoFloat/teste.html
@@ -2,35 +2,26 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Elementos flutuantes</title>
     <style type="text/css">
-        .conteudo {
-            background: red;
-            border: 1px solid gray;
-            width: 200px;
-            height: 200px;
-            margin: 10px;
-            float: left;
+
+        #principal {
+            width: 920px;
+            border: 1px solid red;
         }
-        .conteudo1 {
-            background: red;
-            border: 1px solid gray;
-            width: 200px;
-            height: 250px;
-            margin: 10px;
-            float: left;
-        }
+
     </style>
 </head>
 <body>
-    <div class="conteudo1">
-        CONTEUDO1
+    
+    <div id="principal">
+        <div>
+
+            <h2>Titulo noticia</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius placeat sequi consequuntur eos quasi vel cupiditate dicta, earum saepe expedita vitae pariatur debitis adipisci cum deleniti explicabo praesentium dolor delectus.</p>
+            <a href="">Veja mais</a>
+        </div>
     </div>
-    <div class="conteudo">
-        CONTEUDO2
-    </div>
-    <div class="conteudo">
-        CONTEUDO3
-    </div>
+
 </body>
 </html>
