--- a/Primeiro_Blog/index.html
+++ b/Primeiro_Blog/index.html
@@ -33,8 +33,8 @@
             
             <!-- POSTAGEM EXEMPLO 1 -->
             <div class="postagem">
-                <h2>Titulo da postagem</h2>
-                <span>postado em 9 fevereiro 2021</span>
+                <h2>Titulo da postagem 1</h2>
+                <span class="data-post">postado em 9 fevereiro 2021</span>
                 <img width="620px" src="img/imagem1.jpg">
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam voluptatibus magnam autem, debitis iste deserunt quia pariatur porro mollitia officiis sed earum blanditiis optio reprehenderit dicta, minima nobis odit deleniti?
@@ -43,12 +43,44 @@
             </div>
             <!-- FIM POSTAGEM EXEMPLO 1 -->
 
+            <!-- POSTAGEM EXEMPLO 2 -->
+            <div class="postagem">
+                <h2>Titulo da postagem 2</h2>
+                <span class="data-post">postado em 10 fevereiro 2021</span>
+                <img width="620px" src="img/imagem2.jpg">
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam voluptatibus magnam autem, debitis iste deserunt quia pariatur porro mollitia officiis sed earum blanditiis optio reprehenderit dicta, minima nobis odit deleniti?
+                </p>
+                <a href="">Leia mais</a>
+            </div>
+            <!-- FIM POSTAGEM EXEMPLO 2 -->
+
+
         </div>
 
         <!-- AREA DO MENU LATERAL -->
         <div id="menu-lateral">
-            menu lateral
+            <div class="conteudo-lateral">
+                <h3>Postagens recentes</h3>
+                <div class="postagem-lateral">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    <a href="">Leia mais</a>
+                </div>
+                <div class="postagem-lateral">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    <a href="">Leia mais</a>
+                </div>
+            </div>
+            <div class="categorias">
+                <h3>Categorias</h3>
+                <a href="">Jogos</a>
+                <a href="">Celulares</a>
+                <a href="">Informática</a>
+                <a href="">Eletrônicos</a>
+                <a href="">Jogos</a>
+            </div>            
         </div>
+        <!-- FIM AREA DO MENU LATERAL-->
 
         <!-- RODAPE -->
         <div id="rodape">
